--- a/starbucks/index.html
+++ b/starbucks/index.html
@@ -20,8 +20,8 @@
     <script defer src="./js/main.js"></script>
 
 
-    <!-- AOS -->
-    <link rel="stylesheet" href="./node_modules/aos/dist/aos.css">
+    <!-- AOS --> 
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./css/customAos.css">
 
     <!-- 나눔바른고딕폰트 -->
