--- a/starbucks/index.html
+++ b/starbucks/index.html
@@ -557,7 +557,7 @@
 
 
     <!-- AOS -->
-    <script src="./node_modules/aos/dist/aos.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
